Adding Source Code and New Issue links to Welcome page

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -31,6 +31,10 @@
           <i><%= link_to "Terms and Conditions", safety_path, :class => "terms_link" %></i>
         </div>
         </br>
+        <div class="text-center">
+          <i class="fa fa-github"></i> <i><%= link_to "Source Code ", "https://github.com/maxmetcalfe/Fog-City-Run-2.0/" %></i> <i><%= link_to "| File Bug", "https://github.com/maxmetcalfe/Fog-City-Run-2.0/issues/new" %></i>
+        </div>
+        <br>
       </div>
     </div>
   </div>
