--- a/app/views/racers/show.html.erb
+++ b/app/views/racers/show.html.erb
@@ -74,7 +74,7 @@
   <div class="row">
     <div class="col-md-3">
       <div class="panel panel-default">
-        <div class="panel-heading">Loop-Beer Runs</div>
+        <div class="panel-heading">Runs</div>
         <div class="panel-body">
           <h4>Races</h4>
           <br>
