--- a/app/views/shared/_results_list.html.erb
+++ b/app/views/shared/_results_list.html.erb
@@ -30,7 +30,8 @@
             <td><%= result.time %></td>
             <% if current_user and current_user.admin? %>
             <td><%= link_to 'Edit', edit_result_path(result), :class => "btn btn-default" %> <%= link_to 'Destroy',
-                    result_path(result), method: :delete, data: { confirm: 'Are you sure you want to delete the result for ' + result.racer.first_name.to_s + ' ' + result.racer.last_name.to_s }, :class => "btn btn-default" %></td>
+                    result_path(result), method: :delete, data: { confirm: 'Are you sure you want to delete the result for ' + result.racer.first_name.to_s + ' ' + result.racer.last_name.to_s }, :class => "btn btn-default" %>
+                    <%= link_to 'Continue', continue_time_path(result), method: :post, :class => "btn btn-default" %></td>
             <% end %>
           </tr>
         <% end %>
