Stopping the time for a racer should not refresh the entire page.
Not completely done, but it will work for now.

--- a/app/views/shared/_results_list.html.erb
+++ b/app/views/shared/_results_list.html.erb
@@ -1,4 +1,4 @@
-<div class="panel panel-default" id="start_items_panel">
+<div class="panel panel-default">
   <div class="panel-heading">
     <h4 class="panel-title">
           Results (<%= @race_results_length %>)
@@ -7,7 +7,7 @@
   </div>
   <div id="start_items_table" class="panel">
     <div class="panel-body">
-      <table class="table table-hover table-bordered sortable">
+      <table class="table table-hover table-bordered sortable" id="results-table">
         <thead>
         <tr>
           <th>Rank</th>
