--- a/app/views/shared/_start_list.html.erb
+++ b/app/views/shared/_start_list.html.erb
@@ -1,4 +1,4 @@
-<div class="panel panel-default" id="start_items_panel">
+<div class="panel panel-default">
   <div class="panel-heading">
     <h4 class="panel-title">
       <a data-toggle="collapse" 
@@ -14,7 +14,7 @@
     <div id="start_items_table" class="panel-collapse collapse">
   <% end %>
     <div class="panel-body">
-      <table class="table table-hover table-bordered sortable">
+      <table class="table table-hover table-bordered sortable" id="start-items-table">
         <thead>
         <tr>
           <th>Bib</th>
@@ -31,13 +31,12 @@
             <td><%= Racer.find(item.racer_id).first_name %> <%= Racer.find(item.racer_id).last_name %></td>
             <% if (current_user and current_user.racer_id == item.racer_id) or (current_user and current_user.admin?) %>
               <% if @race_in_progess and !item.finished %>
-                <td><%= link_to 'Stop', collect_time_path(item), method: :post, :class => "btn btn-default" %></td>
+                <td><%= link_to 'Stop', collect_time_path(item), method: :post, :id => "stop-button", :remote => true, :class => "btn btn-default" %></td>
               <% end %>
               <% if !@race_in_progess %>
                 <td><%= link_to 'Edit', edit_start_item_path(item), :class => "btn btn-default" %> <%= link_to 'Destroy', start_item_path(item), method: :delete, data: { confirm: 'Are you sure you want to delete this start entry.'}, :class => "btn btn-default" %></li></td>
               <% end %>
             <% else %>
-              <td><%= link_to 'Stop', collect_time_path(item), method: :post, :class => "btn btn-default disabled" %></td>
               <% if !@current_race %>
                 <td><%= link_to 'Edit', edit_start_item_path(item), :class => "btn btn-default disabled" %> <%= link_to 'Destroy', start_item_path(item), method: :delete, data: { confirm: 'Are you sure you want to delete this start entry.'}, :class => "btn btn-default disabled" %></li></td>
               <% end %>
