--- a/app/views/results/new.html.erb
+++ b/app/views/results/new.html.erb
@@ -10,11 +10,7 @@
   </div>
   <%= form_for @result, :html => {:class => "form-horizontal "} do |r| %>
     <% if @result.errors.any? %>
-      <div id="error_explanation">
-        <h2>
-          <%= pluralize(@result.errors.count, "error") %> prohibited
-          this result from being saved:
-        </h2>
+      <div class="error-explanation">
         <ul>
           <% @result.errors.full_messages.each do |msg| %>
             <li><%= msg %></li>
