--- a/app/views/start_items/edit.html.erb
+++ b/app/views/start_items/edit.html.erb
@@ -10,11 +10,7 @@
   </div>
   <%= form_for @start_item, :html => {:class => "form-horizontal "} do |i| %>
     <% if @start_item.errors.any? %>
-      <div id="error_explanation">
-        <h2>
-          <%= pluralize(@start_item.errors.count, "error") %> prohibited
-          this start_item from being saved:
-        </h2>
+      <div class="error-explanation">
         <ul>
           <% @start_item.errors.full_messages.each do |msg| %>
             <li><%= msg %></li>
