--- a/app/views/start_items/new.html.erb
+++ b/app/views/start_items/new.html.erb
@@ -32,11 +32,7 @@
     <div class="col-md-8 col-md-offset-1">
       <%= form_for @start_item, :html => {:class => "form-horizontal "} do |i| %>
         <% if @start_item.errors.any? %>
-          <div id="error_explanation">
-            <h2>
-              <%= pluralize(@start_item.errors.count, "error") %> prohibited
-              this start_item from being saved:
-            </h2>
+          <div class="error-explanation">
             <ul>
               <% @start_item.errors.full_messages.each do |msg| %>
                 <li><%= msg %></li>
