--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -9,10 +9,7 @@
     </div>
   </div>
   <% if @user.errors.any? %>
-    <div id="error_explanation">
-      <div class="alert alert-danger">
-        The form contains <%= pluralize(@user.errors.count, "error") %>.
-      </div>
+    <div class="error-explanation">
       <ul>
       <% @user.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
