Move navbar header / brand to a partial.

--- a/app/views/shared/_navbar_racers.html.erb
+++ b/app/views/shared/_navbar_racers.html.erb
@@ -5,16 +5,7 @@
   <%= render "shared/navbar" %>
 <nav class="navbar navbar-default navbar navbar-fixed-top">
   <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="<%= root_path %>"><b>Fog City Run</b></a>
-    </div>
+    <%= render "shared/navbar_header" %>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
