--- a/app/views/shared/_navbar_races.html.erb
+++ b/app/views/shared/_navbar_races.html.erb
@@ -1,50 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Racers</title>
-  <%= render "shared/navbar" %>
+<title>Racers</title>
 <nav class="navbar navbar-default navbar navbar-fixed-top">
   <div class="container-fluid">
     <%= render "shared/navbar_header" %>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" <%= link_to 'Racers', racers_path %></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" <%= link_to 'Races', races_path %></a>
-        </li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Stats <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li class="nav-item">
-              <a class="nav-link" <%= link_to 'Racer Count', count_path %></a>
-            </li>   
-            <li class="nav-item">
-              <a class="nav-link" <%= link_to 'Records', records_path %></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" <%= link_to 'Loop-Beer-Loop', loop_beer_path %></a>
-            </li>
-          </ul>
-          <%= render "shared/shop_button" %>
-        </li>
-         <form class="navbar-form navbar-left" role="search">
-           <div class="input-group">
-             <%= form_tag(races_path, :method => "get", id: "search-form") do %>
-               <%= text_field_tag :search, params[:search], placeholder: "Search races...", class: 'form-control' %>
-               <span class="input-group-btn">
-                 <%= submit_tag "Search", class: "btn btn-default" %>
-               </span>
-               <% end %>
-           </div>
-         </form>
+        <%= render "shared/navbar_links" %>
+        <%= render "shared/navbar_stats_dropdown" %>
+        <%= render "shared/shop_button" %>
+        <%= render "shared/navbar_races_search" %>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <%= render "shared/login" %>
       </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+    </div>
+  </div>
 </nav>
