- Show Racer and Race search forms in navbar-collapse. - Align search form within navbar-collapse. - Fix Race search. - Reorganize navbar partials - remove global inheritance of shared/navbar.

--- a/app/views/racers/frequent.html.erb
+++ b/app/views/racers/frequent.html.erb
@@ -1,5 +1,6 @@
 <head>
   <title>Racers</title>
+  <%= render "shared/navbar_racers" %>
 </head>
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <ul class="nav navbar-nav">
