--- a/app/views/racers/new.html.erb
+++ b/app/views/racers/new.html.erb
@@ -1,6 +1,6 @@
 <head>
   <title>New Racer</title>
-  <%= render "shared/navbar" %>
+  <%= render "shared/navbar_racers" %>
 </head>
 <div class="container-fluid">
   <div class="row">
