--- a/app/views/races/edit.html.erb
+++ b/app/views/races/edit.html.erb
@@ -1,4 +1,8 @@
-<h1>New Result</h1>
+<head>
+  <title>New Race</title>
+  <%= render "shared/navbar_races" %>
+</head>
+<h1>New Race</h1>
  
 <%= render 'form' %>
  
