--- a/app/views/races/show.html.erb
+++ b/app/views/races/show.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
   <title>Racers</title>
-  <%= render "shared/navbar" %>
+  <%= render "shared/navbar_races" %>
 </head>
 <div class="container-fluid">
   <% if @is_current_race %>
