--- a/app/views/start_items/index.html.erb
+++ b/app/views/start_items/index.html.erb
@@ -1,6 +1,6 @@
 <head>
   <title>Start Items</title> 
-    <%= render "shared/navbar_races" %>
+    <%= render "shared/navbar" %>
 </head>
 <div class="container-fluid">
   <table class="table table-hover table-bordered sortable">
