--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,6 @@
 <head>
   <title>Welcome</title>
+  <%= render "shared/navbar" %>
 </head>
 <body class="container welcome" style="padding-top: 60px">
 <div class="container-fluid">
