--- a/app/views/pages/safety.html.erb
+++ b/app/views/pages/safety.html.erb
@@ -3,6 +3,7 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <%= render "shared/navbar" %>
   <script src="//fast.eager.io/8zFOq25yxx.js"></script>
 </head>
 <body>
