--- a/app/views/racers/show.html.erb
+++ b/app/views/racers/show.html.erb
@@ -1,5 +1,6 @@
 <head>
   <title>Racers</title>
+  <%= render "shared/navbar_racers" %>
 </head>
 <div class="container-fluid">
   <div class="row">
