--- a/app/views/shared/_navbar_races.html.erb
+++ b/app/views/shared/_navbar_races.html.erb
@@ -5,7 +5,7 @@
 <nav class="navbar navbar-default navbar navbar-fixed-top">
   <div class="container-fluid">
     <%= render "shared/navbar_header" %>
-    <div class="collapse navbar-collapse">
+    <div class="collapse navbar-collapse" id="navbar-collapse-1">
       <ul class="nav navbar-nav">
         <%= render "shared/navbar_links" %>
         <%= render "shared/navbar_stats_dropdown" %>
