User racer.race_count instead of racer.results.count in Racer/Show.

--- a/app/views/racers/show.html.erb
+++ b/app/views/racers/show.html.erb
@@ -21,7 +21,7 @@
       <%= link_to("Claim", edit_user_path(:user => current_user, :racer_id => @racer.id), :class => "btn btn-success")%>
       <% end %>
       <% if @has_results %>
-      <h4>Races: <%= @racer.results.count %></h4>
+      <h4>Races: <%= @racer.race_count %></h4>
       <h4>PR: <%= @racer.results.order(:time).first.time%></h4>
       <h4>Loop-Beer Runs: <%= @racer.results.where("group_name = ?", "Loop-Beer").count %></h4>
       <% end %>
