Fixing results/show view

--- a/app/views/results/show.html.erb
+++ b/app/views/results/show.html.erb
@@ -3,33 +3,27 @@
   <%= render "shared/navbar" %>
 </head>
 <p>
-  <strong>Rank:</strong>
-  <%= @result.rank %>
+  <strong>Rank:</strong> <%= @result.rank %>
 </p>
  
 <p>
-  <strong>Bib:</strong>
-  <%= @result.bib %>
+  <strong>Bib:</strong> <%= @result.bib %>
 </p>
 
 <p>
-  <strong>Racer:</strong>
-  <%= @result.racer_id %>
+  <strong>Racer:</strong> <%= @result.racer_id %>
 </p>
 
 <p>
-  <strong>Group:</strong>
-  <%= @result.group_name %>
+  <strong>Group:</strong> <%= @result.group_name %>
 </p>
 
 <p>
-  <strong>Time:</strong>
-  <%= @result.time %>
+  <strong>Time:</strong> <%= @result.time %>
 </p>
 
 <p>
-  <strong>Race:</strong>
-  <%= @result.race_id %>
+  <strong>Race:</strong> <%= @result.race_id %>
 </p>
 
 <%= link_to 'Racers', racers_path %>
