Rename likely.js and make sure we don't load this JS on every page.

--- a/app/views/start_items/new.html.erb
+++ b/app/views/start_items/new.html.erb
@@ -81,3 +81,9 @@
     </div>
   </div>
 </div>
+<script>
+  $(document).ready(function() {
+    addLikelyRacersListener();
+    addRacerAutocompleteListener();
+  });
+</script>
