--- a/app/views/start_items/new.html.erb
+++ b/app/views/start_items/new.html.erb
@@ -56,6 +56,7 @@
             <%= i.label :racer_id, "Racer:", class: "col-md-1 control-label" %>
               <div class="col-md-3">
                 <%= i.autocomplete_field :racer_id, autocomplete_racer_racers_path, class: "form-control", :value => params[:racer] %>
+                <%= i.hidden_field :racer_id, id: "start_item_racer_id_hidden"%>
               </div>
           </div>
           <div class="form-group">
@@ -84,6 +85,6 @@
 <script>
   $(document).ready(function() {
     addLikelyRacersListener();
-    addRacerAutocompleteListener();
+    runAutocompleteDance();
   });
 </script>
