Move racer updates to Result model.

--- a/app/views/racers/show.html.erb
+++ b/app/views/racers/show.html.erb
@@ -40,6 +40,7 @@
     <h6 style="color:#f6b417"><%= @current_streak_for_view %></h6>
     <h3 style="color:red">Longest: <%= @racer.longest_streak.to_s %></h3>
     <h6 style="color:red"><%= @longest_streak_for_view %></h6>
+    <h6 style="color:rgb(220,220,220)"><%= @racer.updated_at%></h6>
     </div>
     </div>
     </div>
