New result row should not always link to Racer(1).

--- a/app/views/shared/_racer_name_link.html.erb
+++ b/app/views/shared/_racer_name_link.html.erb
@@ -1,1 +1,1 @@
-<td><%= link_to @result.racer.first_name + " " + @result.racer.last_name, racer_path(1)%></td>
+<td><%= link_to @result.racer.first_name + " " + @result.racer.last_name, racer_path(@result.racer)%></td>
