--- a/app/views/shared/_navbar_links.html.erb
+++ b/app/views/shared/_navbar_links.html.erb
@@ -1,4 +1,7 @@
 <li class="nav-item">
+  <a class="nav-link" <%= link_to 'Home', root_path %></a>
+</li>
+<li class="nav-item">
   <a class="nav-link" <%= link_to 'Racers', racers_path %></a>
 </li>
 <li class="nav-item">
