--- a/app/views/start_items/new.html.erb
+++ b/app/views/start_items/new.html.erb
@@ -17,12 +17,14 @@
           </tr>
           </thead>
           <tbody>
-          <% @likely_racers.each do |racer| %>
-            <tr>
-              <td><%= racer.id %> </td>
-              <td><%= racer.first_name %> <%= racer.last_name %> </td>
-              <td><%= racer.fav_bib %> </td>
-            </tr>
+          <% if @likely_racers && @likely_racers.any? %>
+            <% @likely_racers.each do |racer| %>
+              <tr>
+                <td><%= racer.id %> </td>
+                <td><%= racer.first_name %> <%= racer.last_name %> </td>
+                <td><%= racer.fav_bib %> </td>
+              </tr>
+            <% end %>
           <% end %>
           </tbody>
         </table>
@@ -64,7 +66,7 @@
           <div class="form-group">
             <%= i.label :race_id, "Race ID:", class: "col-md-1 control-label" %>
               <div class="col-md-3">
-                <%= i.text_field :race_id, class: "form-control", :value => params[:race_id] %>
+                <%= i.text_field :race_id, class: "form-control", :value => params[:race_id] || @race.id %>
               </div>
           </div>
           <div class="form-group">
@@ -77,7 +79,7 @@
       <div class="row">
         <div class="col-md-3 col-md-offset-1">
           <%= link_to 'Add new racer', new_racer_path(), :class => "btn btn-default" %>
-          <%= link_to 'Back to race', race_path(params[:race_id]), :class => "btn btn-default" %>
+          <%= link_to 'Back to race', race_path(params[:race_id] || @race.id), :class => "btn btn-default" %>
         </div>
       </div>
       <% end %>
