--- a/app/views/start_items/new.html.erb
+++ b/app/views/start_items/new.html.erb
@@ -59,8 +59,8 @@
           <div class="form-group">
             <%= i.label :racer_id, "Racer:", class: "col-md-1 control-label" %>
               <div class="col-md-3">
-                <%= i.autocomplete_field :racer_id, autocomplete_racer_racers_path, class: "form-control", :value => params[:racer] %>
-                <%= i.hidden_field :racer_id, id: "racer_id_hidden"%>
+                <%= i.autocomplete_field :racer_id, autocomplete_racer_racers_path, class: "form-control", :value => params[:racer_name] %>
+                <%= i.hidden_field :racer_id, id: "racer_id_hidden", :value => params[:racer_id]%>
               </div>
           </div>
           <div class="form-group">
