--- a/app/views/results/edit.html.erb
+++ b/app/views/results/edit.html.erb
@@ -33,7 +33,7 @@
     <div class="form-group">
       <%= r.label :group_name, "Group Name:", class: "col-md-1 control-label" %>
         <div class="col-md-3">
-          <%= r.select :group_name, options_for_select(['ALL','Canine','Loop-Beer']), {}, class: "form-control" %>
+          <%= r.select :group_name, options_for_select(['ALL','Canine','Loop-Beer'], @result.group_name), {}, class: "form-control" %>
         </div>
     </div>
     <div class="form-group">
