--- a/app/views/shared/_results_list.html.erb
+++ b/app/views/shared/_results_list.html.erb
@@ -37,17 +37,6 @@
         <% end %>
         </tbody>
       </table>
-      <% if current_user and current_user.admin? and !@race_in_progess and @is_current_race %>
-        <div class="row text-center">
-          <%= link_to 'New Result', new_result_path(:race_id => @race.id), :class => "btn btn-default" %>
-          <%= link_to 'Send Email', send_results_email_path(:race_id => @race), :class => "btn btn-default" %>
-          <%= link_to 'Save Race', save_race_path(), method: :put, :class => "btn btn-default" %>
-        </div>
-      <% elsif current_user and current_user.admin? and !@race_in_progess and !@is_current_race %>
-        <div class="row text-center">
-          <%= link_to 'Send Email', send_results_email_path(:race_id => @race), :class => "btn btn-default" %>
-          <%= link_to 'Enable Race', enable_race_path(), method: :put, :class => "btn btn-default" %>
-        </div>
-      <% end %>
+      <%= render "shared/race_result_actions", locals: { current_user: current_user }%>
   </div>
 </div>
