Fix bug where you couldn't manually add a new result.

--- a/app/views/results/new.html.erb
+++ b/app/views/results/new.html.erb
@@ -58,6 +58,6 @@
 </div>
 <script>
   $(document).ready(function() {
-    runAutocompleteDance();
+    runAutocompleteDance("result_racer_id");
   });
 </script>
