--- a/app/views/start_items/new.html.erb
+++ b/app/views/start_items/new.html.erb
@@ -89,6 +89,6 @@
 <script>
   $(document).ready(function() {
     addLikelyRacersListener();
-    runAutocompleteDance();
+    runAutocompleteDance("start_item_racer_id");
   });
 </script>
