--- a/app/views/races/index.html.erb
+++ b/app/views/races/index.html.erb
@@ -30,7 +30,7 @@
         <td><%= link_to 'Register', new_start_item_path(:race_id => race.id, :racer_id => current_racer.id, :racer_name => current_racer.first_name + " " + current_racer.last_name), :class => "btn btn-default btn-xs" %></td>
         <% end %>
         <% if current_user and current_user.admin? %>
-        <td><%= link_to 'Edit', race_path(race), :class => 'btn btn-default btn-xs' %> <%= link_to 'Destroy',
+        <td><%= link_to 'Edit', edit_race_path(race), :class => 'btn btn-default btn-xs' %> <%= link_to 'Destroy',
               race_path(race), method: :delete, data: { confirm: 'Are you sure you want to delete ' + race.date.to_s + '?'  }, :class => 'btn btn-default btn-xs' %></td>
         <% end %>
       </tr>
@@ -43,6 +43,7 @@
     <tr>
       <th>Date</th>
       <th>Racer Count</th>
+      <th>Note</th>
       <% if current_user and current_user.admin? %>
       <th>Actions</th>
       <% end %>
@@ -53,8 +54,13 @@
       <tr>
         <td><%= link_to race.date, race_path(race) %></td>
         <td><%= race.results.count %></td>
+        <td>
+        <% if race.note %>
+        <div class="race-note"><%= race.note %></div>
+        <% end %>
+        </td>
         <% if current_user and current_user.admin? %>
-          <td><%= link_to 'Edit', race_path(race), :class => 'btn btn-default btn-xs' %> <%= link_to 'Destroy',
+          <td><%= link_to 'Edit', edit_race_path(race), :class => 'btn btn-default btn-xs' %> <%= link_to 'Destroy',
                 race_path(race), method: :delete, data: { confirm: 'Are you sure you want to delete ' + race.date.to_s + '?'  }, :class => 'btn btn-default btn-xs' %></td>
         <% end %>
       </tr>
