--- a/app/views/races/new.html.erb
+++ b/app/views/races/new.html.erb
@@ -25,6 +25,12 @@
         </div>
     </div>
     <div class="form-group">
+      <%= r.label :note, "Note:", class: "col-md-1 control-label" %>
+        <div class="col-md-3">
+          <%= r.text_field :note, class: "form-control" %>
+        </div>
+    </div>
+    <div class="form-group">
       <div class="col-md-1 col-md-offset-1">
       <%=button_tag "Submit", class: "btn btn-success"%>
       </div>
