--- a/app/views/races/show.html.erb
+++ b/app/views/races/show.html.erb
@@ -10,7 +10,11 @@
   <div class="row">
     <div class="col-md-3">
       <div class="race-note">
-        <%= link_to @race.note, edit_race_path(@race) %>
+        <% if @race.note %>
+          <%= link_to @race.note, edit_race_path(@race) %>
+        <% else %>
+          <%= link_to 'add note', edit_race_path(@race) %>
+        <% end %>
       </div>
     </div>
   </div>
