Race notes bug fixes

--- a/app/views/races/index.html.erb
+++ b/app/views/races/index.html.erb
@@ -25,19 +25,21 @@
         <td><%= link_to race.date, race_path(race) %></td>
         <td><%= StartItem.where(race_id: race.id).count %></td>
         <td>
-        <% if race.note %>
+        <% if race.note.present? %>
           <div class="race-note"><%= race.note %></div>
         <% end %>
         </td>
-        <td>
-          <% if current_user and current_user.admin? %>
-            <%= link_to 'Edit', edit_race_path(race), :class => 'btn btn-default btn-xs' %>
-            <%= link_to 'Destroy', race_path(race), method: :delete, data: { confirm: 'Are you sure you want to delete ' + race.date.to_s + '?'  }, :class => 'btn btn-default btn-xs' %>
-          <% end %>
-          <% if current_user and current_user.racer_id %>
-            <%= link_to 'Register', new_start_item_path(:race_id => race.id, :racer_id => current_racer.id, :racer_name => current_racer.first_name + " " + current_racer.last_name), :class => "btn btn-default btn-xs" %>
-          <% end %>
-        </td>
+        <% if current_user and current_user.racer_id %>
+          <td>
+            <% if current_user and current_user.admin? %>
+              <%= link_to 'Edit', edit_race_path(race), :class => 'btn btn-default btn-xs' %>
+              <%= link_to 'Destroy', race_path(race), method: :delete, data: { confirm: 'Are you sure you want to delete ' + race.date.to_s + '?'  }, :class => 'btn btn-default btn-xs' %>
+            <% end %>
+            <% if current_user and current_user.racer_id %>
+              <%= link_to 'Register', new_start_item_path(:race_id => race.id, :racer_id => current_racer.id, :racer_name => current_racer.first_name + " " + current_racer.last_name), :class => "btn btn-default btn-xs" %>
+            <% end %>
+          </td>
+        <% end %>
       </tr>
     <% end %>
     </tbody>
@@ -60,7 +62,7 @@
         <td><%= link_to race.date, race_path(race) %></td>
         <td><%= race.results.count %></td>
         <td>
-        <% if race.note %>
+        <% if race.note.present? %>
           <div class="race-note"><%= race.note %></div>
         <% end %>
         </td>
