Add link to Heylo group

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -31,6 +31,15 @@ h1 {
     color: #727272 !important;
 }
 
+.heylo-link {
+	color: #4d996b;
+}
+
+.heylo-link img {
+	width: 16px;
+	height: 16px;
+}
+
 
 .panel-transparent {
     background: rgba(240, 240, 240, 0.8)!important;
