--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -27,7 +27,9 @@
           <p><b><i class="fa fa-bar-chart-o"></i>&nbsp;&nbsp;How many people come?</b> 5-20. You can view the race results <%= link_to "here", races_path %> </a> and our <a href=http://www.strava.com/segments/7613369>Strava.</a></P>
           <p><i class="fa fa-suitcase"></i><b>&nbsp;&nbsp;A locked closet is available for any extra belongings.</b></P>
           <p><a href="http://facebook.com/FogCityRun"><i class="fa fa-facebook-square"></i>&nbsp;&nbsp;Go to our Facebook page. </a></P>
-        </div>
+          <p><a class="heylo-link" href="https://link.heylo.co/AgCZ"><img src="https://app.heylo.co/favicon.ico"</img>&nbsp;&nbsp;Join our group on Heylo!</a></P>
+      
+          </div>
         <div class="text-center">
           <i><%= link_to "Terms and Conditions", safety_path, :class => "terms_link" %></i>
         </div>
