--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,8 +6,8 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
-  <meta property="og:image" content="fcr-og.png"/>
-  <link rel="apple-touch-icon" href="fcr-touch-icon.png">
+  <meta property="og:image" content="http://fogcityrun.com/fcr-og.png"/>
+  <link rel="apple-touch-icon" href="http://fogcityrun.com/fcr-touch-icon.png">
 </head>
 <body style="padding-top: 60px">
 
