--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <%= csrf_meta_tags %>
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
   <meta property="og:image" content="http://fogcityrun.com/fcr-og.png"/>
+  <meta property="og:title" content="Fog City Run"/>
   <link rel="apple-touch-icon" href="http://fogcityrun.com/fcr-touch-icon.png">
 </head>
 <body style="padding-top: 60px">
